# tree-sitter-qdoc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  sample.qdoc  setup.py  test-inline.qdoc  tree-sitter.json
bindings/c/: tree-sitter-qdoc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qdoc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQdoc/: qdoc.h
bindings/swift/TreeSitterQdocTests/: TreeSitterQdocTests.swift
editors/: SETUP.md
editors/emacs/: qdoc-ts-mode.el
editors/sublime/: QDoc.sublime-syntax  QDocInCpp.sublime-syntax  QDocInQml.sublime-syntax
editors/vim/ftdetect/: qdoc.vim
editors/vim/syntax/: qdoc.vim
queries/: highlights.scm
queries/cpp/: injections.scm
queries/doxygen/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: block_commands.txt  qdoc.txt
test/samples/: sample.qdoc  test-inline.qdoc
test/scripts/: Pipfile  README.md  extract_qdoc_content.go  extract_qdoc_content.py  go.mod  parse_qdoc.py
